# SATySFi-fonts-noto-color-emoji

./: README.md  Satyristes  doc-fonts-noto-emoji.saty  fonts.satysfi-hash  satysfi-fonts-noto-emoji-doc.opam  satysfi-fonts-noto-emoji.opam
doc/: doc-ja.md  doc-ja.saty
