opam-version: "2.0"
name: "satysfi-fonts-noto-emoji"
version: "1.05+uh+2"
synopsis: "SATySFi Font Package for Noto Emoji fonts"
description: """
SATySFi font package for Noto Emoji fonts.

This package installs fonts from https://www.google.com/get/noto/.
"""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "OFL1-1"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-noto-emoji"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-noto-emoji/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-noto-emoji.git"


extra-source "noto-emoji-2019-11-19-unicode12.zip" {
  archive: "https://github.com/googlefonts/noto-emoji/archive/v2019-11-19-unicode12.zip"
  checksum: [
    "sha256=9751a3889df1d52ede600f66661e0a3ef105cb520180ca846adcdf37db7a6d84"
  ]
}


depends: [
  "satysfi" {>= "0.0.3" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
]
build: [
  ["unzip" "-j" "-d" "noto-emoji" "-o" "noto-emoji-2019-11-19-unicode12.zip" "*.ttf"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-noto-emoji"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]